--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
     </header>
     <main>
       <h2>Signup</h2>
-      <form method="POST" action="http://localhost:5000/signup">
+      <form method="POST" action="https://stroystream-api.onrender.com/signup">
         <label>
           <input type="text" class="username" name="username" placeholder="Choose a Name" required>
         </label>
