--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     </header>
     <main>
       <h2>Login</h2>
-      <form method="POST" action="http://localhost:5000/login">
+      <form method="POST" action="https://storystream-api.onrender.com/login">
         <label>
           <input type="email" class="email" name="email" placeholder="Enter Email" required>
         </label>
