Updated ejs files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,8 +50,8 @@
       <hr>
       <h3>Creating an account</h3>
       <p>To create an account click the link below</p>
-      <p><a href="https://storystream-api.onrender.com/signup">https://storystream-api.onrender.com/signup</a></p>
-      <p>To login <a href="https://storystream-api.onrender.com/signup">https://storystream-api.onrender.com/signup</a></p>
+      <p><a href="#">https://storystream-api.onrender.com/signup</a></p>
+      <p>To login <a href="#">https://storystream-api.onrender.com/signup</a></p>
       <p>When you've successfully created your account you'll see your API key displayed</p>
       <hr>
       <hr>
